--- a/src-mobile/smsrecord.html
+++ b/src-mobile/smsrecord.html
@@ -12,255 +12,292 @@
     <script type="text/javascript" src="js/amaze/amazeui.widgets.helper.js"></script>
     <script type="text/javascript" src="js/amaze/app.js"></script>
     <script type="text/javascript" src="js/amaze/handlebars.min.js"></script>
+    <script type="text/javascript" src="js/amaze/amazeui.page.js"></script>
     <script href="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+    <link rel="stylesheet" href="css/amaze/amazeui.page.css"/>
     <link rel="stylesheet" href="css/amaze/amazeui.css"/>
     <link rel="stylesheet" href="css/amaze/admin.css"/>
     <link rel="stylesheet" href="css/amaze/amazeui.flat.css"/>
     <link rel="stylesheet" href="css/smsrecord.css"/>
 </head>
 <body class="am-scrollable-horizontal am-scrollable-vertical">
-    <div class="am-g am-margin-vertical">
-        <div class="am-u-sm-2 am-text-right">
-            <img src="images/logo.png">
-        </div>
-        <div class="am-u-sm-10"><h1>融成财富-微信公众平台短信申请记录</h1></div>
+<div class="am-g am-margin-vertical">
+    <div class="am-u-sm-2 am-text-right">
+        <img src="images/logo.png">
     </div>
-    <div>
-        <table class="am-table am-scrollable-horizontal am-text-nowrap am-table-bordered">
-            <thead>
-            <tr>
-                <th>姓名</th>
-                <th>手机号码</th>
-                <th>申请时间</th>
-                <th>状态</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr><tr>
-                <td>张三</td>
-                <td>18233333333</td>
-                <td>2017/7/27 9:00:22</td>
-                <td>
-                    <button class="info-status" onclick="handle();">未处理</button>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-    <script>
-        function handle() {
-            $(".info-status").parent.addClass("am-warning");
-        }
-    </script>
+    <div class="am-u-sm-10"><h1>融成财富-微信公众平台短信申请记录</h1></div>
+</div>
+<div>
+    <table id="page-table" class="am-table am-scrollable-horizontal am-text-nowrap am-table-bordered">
+        <thead>
+        <tr>
+            <th>姓名</th>
+            <th>手机号码</th>
+            <th>申请时间</th>
+            <th>状态</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td>18233333333</td>
+            <td>2017/7/27 9:00:22</td>
+            <td>
+                <button class="info-status" onclick="handle();">未处理</button>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+
+    <div id="page""></div>
+</div>
+<script type="text/javascript" src="js/demo.js"></script>
+<script>
+
+
+    function handle() {
+        $(".info-status").parent.addClass("am-warning");
+    }
+</script>
 </body>
 </html>
